@@ -26,27 +26,12 @@ tjfn_LDFLAGS = @LDFLAGS_STATIC@
 tjfn_LDADD = librpmdb.la
 
 pkgincdir = $(pkgincludedir)
-pkginc_HEADERS = db.h header.h hdrinline.h rpmdb.h
+pkginc_HEADERS = header.h hdrinline.h rpmdb.h
 noinst_HEADERS = fprint.h header_internal.h legacy.h
 
 pkglibdir =		@USRLIBRPM@
 versionlibdir = 	$(pkglibdir)/@VERSION@
-versionlib_PROGRAMS = \
-	db_archive \
-	db_checkpoint \
-	db_deadlock \
-	db_dump \
-	db_hotbackup \
-	db_load \
-	db_printlog \
-	db_recover \
-	db_stat \
-	db_upgrade \
-	db_verify 
-if WITH_DB_RPC
-versionlib_PROGRAMS += \
-	db_svc
-endif
+versionlib_PROGRAMS =
 
 mylibs = \
 	$(top_builddir)/rpmdb/librpmdb.la \
@@ -68,12 +53,6 @@ librpmdb_la_DEPENDENCIES = $(DBLIBOBJS)
 librpmdb.la: $(librpmdb_la_OBJECTS) $(librpmdb_la_DEPENDENCIES) 
 	$(librpmdb_la_LINK) -rpath $(usrlibdir) $(librpmdb_la_OBJECTS) $(librpmdb_la_LIBADD)
 
-# XXX make sure that db.h symlink is generated
-dbconfig.c $(DBLIBSRCS): db.h
-
-dbconfig.o: $(top_srcdir)/dbconfig.c
-	$(COMPILE) -o $@ -c $<
-
 tagtbl.c: Makefile.am $(top_srcdir)/lib/rpmlib.h 
 	@echo '/*@-bounds@*/' > $@
 	@echo '#include "system.h"' >> $@
@@ -93,72 +72,28 @@ tagtbl.c: Makefile.am $(top_srcdir)/lib/rpmlib.h
 	@echo 'const int rpmTagTableSize = sizeof(rpmTagTbl) / sizeof(rpmTagTbl[0]) - 1;' >> $@
 	@echo '/*@=bounds@*/' >> $@
 
-db.h:
-	@ln -sf ../$(WITH_DB_SUBDIR)/db.h $@
+if WITH_DB_INTERNAL
+my_DB_HEADER = $(top_builddir)/$(WITH_DB_SUBDIR)/db.h
+else
+my_DB_HEADER = db_emu.h
+endif
+my_DB_TOOLS = db_archive db_checkpoint db_deadlock db_dump db_hotbackup db_load db_printlog db_recover db_stat db_upgrade db_verify 
+if WITH_DB_RPC
+my_DB_TOOLS += db_svc
+endif
 
-db_archive_SOURCES =
-db_archive_LDADD =
-db_archive_DEPENDENCIES =
-db_archive$(EXEEXT): $(top_builddir)/$(WITH_DB_SUBDIR)/db_archive
-	$(LN_S) $< $@
-db_checkpoint_SOURCES =
-db_checkpoint_LDADD =
-db_checkpoint_DEPENDENCIES =
-db_checkpoint$(EXEEXT): $(top_builddir)/$(WITH_DB_SUBDIR)/db_checkpoint
-	$(LN_S) $< $@
-db_deadlock_SOURCES =
-db_deadlock_LDADD =
-db_deadlock_DEPENDENCIES =
-db_deadlock$(EXEEXT): $(top_builddir)/$(WITH_DB_SUBDIR)/db_deadlock
-	$(LN_S) $< $@
-db_dump_SOURCES =
-db_dump_LDADD =
-db_dump_DEPENDENCIES =
-db_dump$(EXEEXT): $(top_builddir)/$(WITH_DB_SUBDIR)/db_dump
-	$(LN_S) $< $@
-db_hotbackup_SOURCES =
-db_hotbackup_LDADD =
-db_hotbackup_DEPENDENCIES =
-db_hotbackup$(EXEEXT): $(top_builddir)/$(WITH_DB_SUBDIR)/db_hotbackup
-	$(LN_S) $< $@
-db_load_SOURCES =
-db_load_LDADD =
-db_load_DEPENDENCIES =
-db_load$(EXEEXT): $(top_builddir)/$(WITH_DB_SUBDIR)/db_load
-	$(LN_S) $< $@
-db_printlog_SOURCES =
-db_printlog_LDADD =
-db_printlog_DEPENDENCIES =
-db_printlog$(EXEEXT): $(top_builddir)/$(WITH_DB_SUBDIR)/db_printlog
-	$(LN_S) $< $@
-db_recover_SOURCES =
-db_recover_LDADD =
-db_recover_DEPENDENCIES =
-db_recover$(EXEEXT): $(top_builddir)/$(WITH_DB_SUBDIR)/db_recover
-	$(LN_S) $< $@
-db_stat_SOURCES =
-db_stat_LDADD =
-db_stat_DEPENDENCIES =
-db_stat$(EXEEXT): $(top_builddir)/$(WITH_DB_SUBDIR)/db_stat
-	$(LN_S) $< $@
-db_upgrade_SOURCES =
-db_upgrade_LDADD =
-db_upgrade_DEPENDENCIES =
-db_upgrade$(EXEEXT): $(top_builddir)/$(WITH_DB_SUBDIR)/db_upgrade
-	$(LN_S) $< $@
-db_verify_SOURCES =
-db_verify_LDADD =
-db_verify_DEPENDENCIES =
-db_verify$(EXEEXT): $(top_builddir)/$(WITH_DB_SUBDIR)/db_verify
-	$(LN_S) $< $@
-db_svc_SOURCES =
-db_svc_LDADD =
-db_svc_DEPENDENCIES =
-db_svc$(EXEEXT): $(top_builddir)/$(WITH_DB_SUBDIR)/db_svc
-	$(LN_S) $< $@
+install-data-local:
+	test -z "$(pkgincdir)" || $(MKDIR_P) $(DESTDIR)$(pkgincdir)
+	test -z "$(versionlibdir)" || $(MKDIR_P) $(DESTDIR)$(versionlibdir)
+	$(pkgincHEADERS_INSTALL) $(my_DB_HEADER) $(DESTDIR)$(pkgincdir)/db.h
+	for tool in . $(my_DB_TOOLS); do \
+		test ".$$tool" = .. && continue; \
+		$(INSTALL_PROGRAM_ENV) $(LIBTOOL) --mode=install $(versionlibPROGRAMS_INSTALL) \
+			$(top_builddir)/$(WITH_DB_SUBDIR)/$$tool $(DESTDIR)$(versionlibdir)/$$tool; \
+	done
 
 clean-local:
-	rm -f *.o db.h
+	rm -f *.o
 
 BUILT_SOURCES = tagtbl.c
 
